--- a/app/globals.css
+++ b/app/globals.css
@@ -16,18 +16,51 @@
   }
 }
 
+html, body, h1, h2, h3, h4, h5, h6, p, a, li, button, input, textarea {
+  font-family: var(--font-open-sans);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-roboto);
+}
+
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+@layer base {
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-semibold;
+  }
+
+  h1{
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-3xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  h4 {
+    @apply text-xl;
+  }
+  h5, h6 {
+    @apply text-lg;
+  }
+  p, a, li, button, input, textarea {
+    @apply text-base;
+  }
+
+  a{
+    @apply text-blue-500;
+  }
+
+  
 }
